samples/_failures_safe/1761196843_0e7c70_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef67fa92.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_ef67fa92.c:144:5: error: expected declaration or statement at end of input
  144 |     if (a->cols != b->rows) return NULL;
      |     ^~
